<resources>
    <string name="app_name">GitHubAssignment</string>
    <string name="add_repository">Add Repository</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="unable_to_load">Unable to load URL</string>
    <string name="repositories">Repositories</string>
    <string name="enter_name">Enter the name of the repository</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="enter_rep_warning">Please enter the repository name</string>
    <string name="enter_owner_name_warning">Please enter the Owner name</string>
    <string name="no_network">Check the internet connectivity</string>
</resources>