<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/rectangle_border_corner"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llEditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etRepName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:backgroundTint="@color/pale_blue"
                android:textColorHint="@color/light_black"
                android:fontFamily="@font/manrope_regular"
                android:background="@drawable/rectangle_border_corner"
                android:gravity="start|center"
                android:hint="@string/enter_name"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:backgroundTint="@color/pale_blue"
                android:fontFamily="@font/manrope_regular"
                android:gravity="start|center"
                android:background="@drawable/rectangle_border_corner"
                android:hint="@string/enter_owner_name"
                android:textColorHint="@color/light_black"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llEditTexts"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_bold"
                android:gravity="start"
                android:text="@string/cancel"
                android:textColor="@color/pale_dark_blue" />

            <TextView
                android:id="@+id/addBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_bold"
                android:gravity="end"
                android:text="@string/add"
                android:textColor="@color/pale_dark_blue" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>